# prerecover

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  cassidy.yaml  justfile  out.yaml  pyproject.toml  pyrightexample.config.json
compose/: app.dev.yaml  app.yaml
config/: dev.example.toml
k8s/app/: deployment.yaml  nginx.yaml  service.yaml
src/domain/city/entities/: city.py
src/domain/common/entities/: aggregate_root.py  entity.py
src/infrastructure/: toml_loader.py
src/presentation/api/: __main__.py  config.py  main.py
src/presentation/api/graphql/: __init__.py  healthcheck.py  main.py
src/presentation/api/http/: __init__.py  healthcheck.py  main.py
