[tool.poetry]
name = "prerecover"
version = "0.1.0"
description = ""
authors = ["ternyavsky <ilya.ternyavsky@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.0"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
