[tool.poetry]
name = "prerecover"
version = "0.1.0"
description = ""
authors = ["ternyavsky <ilya.ternyavsky@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.0"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
asyncio = "^3.4.3"
ipython = "^8.23.0"
strawberry-graphql = {extras = ["debug-server"], version = "^0.227.3"}
adaptix = "^3.0.0b5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
